--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>call back hell task</title>
     <style>
 
-        .timer{
+        . countDown{
             background-color: rgb(212, 255, 212);
             font-size: 300px;
             text-align: center;
