--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>call back hell task</title>
-    <style>
-
-        . countDown{
-            background-color: rgb(212, 255, 212);
-            font-size: 300px;
-            text-align: center;
-            color: rgb(247, 0, 82);
-
-
-        }
-    </style>
-</head>
-
-<body>
-    
-    <h1 class="countDown">10</h1>
-
-    <script src="script.js"></script>
-    
-</body>
-</html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+     <title>CountDown Starts</title> 
+     <style> 
+       body { 
+         background-color: rgba(0, 0, 0, 0.829); 
+       } 
+       #content1 { 
+         font-weight: bold; 
+         display: block; 
+         clear: both; 
+         text-align: center; 
+         margin-top: 160px; 
+         font-size: 250px; 
+         color: white; 
+       } 
+       #content2 { 
+         font-weight: bold; 
+         display: block; 
+         clear: both; 
+         text-align: center; 
+         margin-top: 200px; 
+         font-size: 110px; 
+         color: white; 
+       } 
+     </style> 
+   </head> 
+   <body> 
+     <script src="script.js"></script> 
+     <h1 id="content1"></h1> 
+     <h1 id="content2"></h1> 
+   </body> 
+ </html>
