--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <style>
   #countDown{
-    background-color: aqua;
+    background-color: green;
     color: brown;
     margin-left: 40%;
-    font-size: xx-large;
+    font-size: 40px;
     
 
   }
